--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,22 +20,21 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: test@example.org
-phone: 888 888 88 88
+email: david@hlidek.cz
+phone: 774 661 530
 address:
-  street: 450 Serra Mall
-  city: Stanford
-  region: CA
-  postcode: '94305'
-  country: United States
-  country_code: US
+  street: Nepovolená 1174/9
+  city: Praha 10
+  region: 
+  postcode: '10700'
+  country: Czechia
+  country_code: CZ
 coordinates:
-  latitude: '37.4275'
-  longitude: '-122.1697'
-directions: Enter Building 1 and take the stairs to Office 200 on Floor 2
+  latitude: '50.0531669'
+  longitude: '14.5824414'
+directions: 
 office_hours:
-  - 'Monday 10:00 to 13:00'
-  - 'Wednesday 09:00 to 10:00'
+  - 'Po-Pá 8:00 - 18:00'
 appointment_url: 'https://calendly.com'
 contact_links:
 #  - icon: comments
